--- a/app/src/main/res/layout/activity_video_tutorial.xml
+++ b/app/src/main/res/layout/activity_video_tutorial.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".style.VideoTutorial">
+
     <Toolbar
         android:id="@+id/toolbar_video"
         android:layout_width="match_parent"
@@ -21,15 +22,30 @@
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/youtube_player"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"/>
+        android:background="#fff"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_video" />
+
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/view_pager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/youtube_player"-->
+         <!--/>-->
+
+    <!--<Button-->
+    <!--android:id="@+id/btn_detail"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="แสดงรายละเอียด"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/youtube_player"-->
+    <!--/>-->
+
     <TextView
-        android:id="@+id/tv_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="การแต่งหน้า"
-        app:layout_constraintTop_toBottomOf="@+id/youtube_player"/>
+    android:id="@+id/tv_detail"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@+id/youtube_player"/>
 
 </android.support.constraint.ConstraintLayout>
